--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,6 +1,14 @@
-set -g default-terminal "screen-256color"
-set-option -ga terminal-overrides ",xterm-256color:Tc"
+# keybind
+set-window-option -g mode-keys vi
+bind-key -T copy-mode-vi v send-keys -X begin-selection
+bind-key -T copy-mode-vi C-v send-keys -X rectangle-toggle
+bind-key -T copy-mode-vi y send-keys -X copy-pipe-and-cancel "xsel -bi"
+bind-key -T copy-mode-vi Enter send-keys -X copy-pipe-and-cancel "xsel -bi"
+
+# shell
 set -g default-shell '/usr/bin/fish'
 
+# color
+set -g default-terminal "screen-256color"
+set-option -ga terminal-overrides ",xterm-256color:Tc"
 source-file ~/.tmux/iceberg_minimal.tmux.conf
-#source-file ~/.tmux/iceberg.tmux.conf
